--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                         <textarea placeholder="Your Message" class="form-control" name="message" rows="8"
                                   required></textarea>
                                         </div>
-                                        <!--                        <input type="hidden" name="_next" value="https://localhost/thanks.html">-->
-                                        <!--                        <input type="hidden" name="_captcha" value="false">-->
+                                        <input type="hidden" name="_next" value="https://shubhamshewdikar.github.io//thanks.html">
+                                        <input type="hidden" name="_captcha" value="false">
                                         <!--                      <input type="hidden" name="_subject" value="New submission!">-->
 
 
