--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 </div>
 
-<section id="about" class="about-mf sect-pt1 route" style="padding: 20px">
+<section id="about" class="about-mf sect-pt1 route" style="">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -71,48 +71,49 @@
                         <div class="col-md-6">
                             <div class="skill-mf">
                                 <p class="title-s">Skills</p>
-                                <span>Python, Flask framework</span> <span class="pull-right">75%</span>
+                                <span>Python, Flask framework</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>Pandas, Numpy, Spacy</span> <span class="pull-right">50%</span>
+                                <span>VueJs, AngularJS, Quasar Framework</span>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
+                                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>HTML, CSS3, Javascript</span> <span class="pull-right">85%</span>
+                                <span>Serverless Application Framework / REST APIs</span>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
+                                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>VueJs, AngularJS, Quasar Framework</span> <span class="pull-right">85%</span>
+                                <span>HTML, CSS3, Javascript</span>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
+                                    <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>SQL, (Postgres DB, MySQL DB)</span> <span class="pull-right">90%</span>
+                                <span>SQL, (Postgres DB, MySQL DB)</span>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>AWS services(Lambda,EC2,S3,API Gateway)</span> <span class="pull-right">90%</span>
+                                <span>AWS services(Lambda,EC2,S3,API Gateway)</span>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>Serverless Application Framework</span> <span class="pull-right">90%</span>
+                                <span>Pandas, Numpy, Spacy</span>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
+
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -123,23 +124,13 @@
                                     </h5>
                                 </div>
                                 <p class="lead">
-                                    Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu
-                                    erat, accumsan id
-                                    imperdiet et, porttitor
-                                    at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                                    porttitor accumsan tincidunt.
+                                    Hi, I'm a Software Developer at <a style="color: #1c81c4" href="https://geospoc.com">Geospoc</a> in Pune, Maharashtra
                                 </p>
                                 <p class="lead">
-                                    Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor
-                                    eget felis
-                                    porttitor volutpat. Vestibulum
-                                    ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                                    I am fond of building extensive applications and like to integrate new technologies in it.
+                                    Would love to play and watch cricket, badminton and read tech-blogs, political news during leisure time.
                                 </p>
                                 <p class="lead">
-                                    Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in,
-                                    elementum id enim.
-                                    Nulla porttitor accumsan
-                                    tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
                                 </p>
                             </div>
                         </div>
@@ -149,77 +140,58 @@
         </div>
     </div>
 </section>
-<section id="bg_class2" style="padding: 20px" class="portfolio-mf sect-pt4 route">
-    <div class="container" style="height: 600px">
+<section id="bg_class2" style="" class="paralax-mf sect-pt4 route">
+    <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="title-box text-center">
                     <h3 class="title-a">
-                        Portfolio
+                        Work Experience
                     </h3>
-                    <p class="subtitle-a">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    </p>
+<!--                    <p class="subtitle-a">-->
+<!--                        -->
+<!--                    </p>-->
                     <div class="line-mf"></div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-5">
                 <div class="work-box">
                     <div class="work-content">
                         <div class="row">
-                            <div class="col-sm-8">
-                                <h2 class="w-title">Lorem impsum dolor</h2>
+                            <div class="col-sm-12">
+                                <h2 class="w-title"><a href="https://www.incentius.com/">Incentius</a></h2>
                                 <div class="w-more">
-                                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                                    <span class="w-ctegory">Solutions Developer</span> / <span class="w-date">Nov2017 - Feb2020</span>
                                 </div>
                             </div>
-                            <div class="col-sm-4">
-                                <div class="w-like">
-                                    <span class="ion-ios-plus-outline"></span>
-                                </div>
-                            </div>
+<!--                            <div class="col-sm-4">-->
+<!--                                <div class="w-like">-->
+<!--                                    <span class="ion-ios-plus-outline"></span>-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                     </a>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-2"></div>
+            <div class="col-md-5">
                 <div class="work-box">
                     <div class="work-content">
                         <div class="row">
-                            <div class="col-sm-8">
-                                <h2 class="w-title">Loreda Cuno Nere</h2>
+                            <div class="col-sm-12">
+                                <h2 class="w-title"><a href="https://geospoc.com">Geospoc</a></h2>
                                 <div class="w-more">
-                                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                                    <span class="w-ctegory">Software Developer - Backend</span> / <span class="w-date">Mar2020 - Current</span>
                                 </div>
                             </div>
-                            <div class="col-sm-4">
-                                <div class="w-like">
-                                    <span class="ion-ios-plus-outline"></span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="work-box">
-                    <div class="work-content">
-                        <div class="row">
-                            <div class="col-sm-8">
-                                <h2 class="w-title">Mavrito Lana Dere</h2>
-                                <div class="w-more">
-                                    <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
-                                </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="w-like">
-                                    <span class="ion-ios-plus-outline"></span>
-                                </div>
-                            </div>
+<!--                            <div class="col-sm-4">-->
+<!--                                <div class="w-like">-->
+<!--                                    <span class="ion-ios-plus-outline"></span>-->
+<!--                                </div>-->
+<!--                            </div>-->
                         </div>
                     </div>
                     </a>
@@ -228,7 +200,7 @@
         </div>
     </div>
 </section>
-<section  class="paralax-mf sect-mt4 route">
+<section  class="paralax-mf route">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -253,8 +225,7 @@
                                                    placeholder="Email Address" required>
                                         </div>
                                         <div class="form-group">
-                        <textarea placeholder="Your Message" class="form-control" name="message" rows="8"
-                                  required></textarea>
+                                        <textarea placeholder="Your Message" class="form-control" name="message" rows="8" required></textarea>
                                         </div>
                                         <input type="hidden" name="_captcha" value="false">
                                         <!--                      <input type="hidden" name="_subject" value="New submission!">-->
@@ -277,12 +248,8 @@
                                 </div>
                                 <div class="more-info">
                                     <p class="lead">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem
-                                        soluta quidem
-                                        expedita aperiam aliquid at.
-                                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                                        mollitia inventore?
-                                    </p>
+                                    If you wanna get in touch, fill up the form or send an email to
+                                    shubham.shewdikar@gmail.com                                    </p>
                                     <ul class="list-ico">
                                         <li><span class="ion-ios-location"></span>Baner, Pune</li>
                                         <li><span class="ion-ios-telephone"></span>+91 90962 34969</li>
