--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
     </div>
 </section>
-<section  class="paralax-mf route">
+<section  class="route">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
