--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                                 </div>
                                 <div class="more-info">
                                     <p class="lead">
-                                    If you wanna get in touch, fill up the form or send an email to
-                                    shubham.shewdikar@gmail.com                                    </p>
+                                    If you wanna get in touch, fill up the form or send me an email.
+                                    </p>
                                     <ul class="list-ico">
                                         <li><span class="ion-ios-location"></span>Baner, Pune</li>
                                         <li><span class="ion-ios-telephone"></span>+91 90962 34969</li>
