--- a/index.html
+++ b/index.html
@@ -123,9 +123,13 @@
                                         About me
                                     </h5>
                                 </div>
-                                <p class="lead">
+                                <!--<p class="lead">
                                     Hi, I'm a Software Developer at <a style="color: #1c81c4" href="https://geospoc.com">Geospoc</a> in Pune, Maharashtra
+                                </p>-->
+                                <p class="lead">
+                                    Hi, I'm a Fullstack Developer, working in Pune, Maharashtra
                                 </p>
+
                                 <p class="lead">
                                     I am fond of building extensive applications and like to integrate new technologies in it.
                                     Would love to play and watch cricket, badminton and read tech-blogs, political news during leisure time.
@@ -140,6 +144,7 @@
         </div>
     </div>
 </section>
+<!--    
 <section id="bg_class2" style="" class="paralax-mf sect-pt4 route">
     <div class="container">
         <div class="row">
@@ -148,9 +153,6 @@
                     <h3 class="title-a">
                         Work Experience
                     </h3>
-<!--                    <p class="subtitle-a">-->
-<!--                        -->
-<!--                    </p>-->
                     <div class="line-mf"></div>
                 </div>
             </div>
@@ -166,11 +168,6 @@
                                     <span class="w-ctegory">Solutions Developer</span> / <span class="w-date">Nov2017 - Feb2020</span>
                                 </div>
                             </div>
-<!--                            <div class="col-sm-4">-->
-<!--                                <div class="w-like">-->
-<!--                                    <span class="ion-ios-plus-outline"></span>-->
-<!--                                </div>-->
-<!--                            </div>-->
                         </div>
                     </div>
                     </a>
@@ -187,11 +184,6 @@
                                     <span class="w-ctegory">Software Developer - Backend</span> / <span class="w-date">Mar2020 - Current</span>
                                 </div>
                             </div>
-<!--                            <div class="col-sm-4">-->
-<!--                                <div class="w-like">-->
-<!--                                    <span class="ion-ios-plus-outline"></span>-->
-<!--                                </div>-->
-<!--                            </div>-->
                         </div>
                     </div>
                     </a>
@@ -200,6 +192,7 @@
         </div>
     </div>
 </section>
+-->
 <section  class="route">
     <div class="container">
         <div class="row">
