--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Shubham Portfolio</title>
+    <title>Shubham Shewdikar</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -18,7 +18,6 @@
 
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -41,6 +40,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="#bg_class2">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link js-scroll" href="#projects">projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll" href="#contact">Contact</a>
@@ -66,7 +68,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <div class="box-shadow-full">
+                <div class="box-shadow-full" style="margin-top: 20px">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="skill-mf">
@@ -95,13 +97,13 @@
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>SQL, (Postgres DB, MySQL DB)</span>
+                                <span>SQL, (Postgres DB, MySQL DB), PostGIS</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>AWS services(Lambda,EC2,S3,API Gateway)</span>
+                                <span>AWS services(Lambda,EC2,S3,API Gateway, Elastic Beanstalk)</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                                          aria-valuemin="0"
@@ -123,13 +125,9 @@
                                         About me
                                     </h5>
                                 </div>
-                                <!--<p class="lead">
-                                    Hi, I'm a Software Developer at <a style="color: #1c81c4" href="https://geospoc.com">Geospoc</a> in Pune, Maharashtra
-                                </p>-->
                                 <p class="lead">
-                                    Hi, I'm a Fullstack Developer, working in Pune, Maharashtra
+                                    Hi, I'm a Software Developer at <a style="color: #1c81c4" href="https://geospoc.com">Geospoc</a> in Pune, Maharashtra
                                 </p>
-
                                 <p class="lead">
                                     I am fond of building extensive applications and like to integrate new technologies in it.
                                     Would love to play and watch cricket, badminton and read tech-blogs, political news during leisure time.
@@ -144,7 +142,6 @@
         </div>
     </div>
 </section>
-<!--    
 <section id="bg_class2" style="" class="paralax-mf sect-pt4 route">
     <div class="container">
         <div class="row">
@@ -192,12 +189,57 @@
         </div>
     </div>
 </section>
--->
 <section  class="route">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
                 <div class="contact-mf">
+                    <div id="projects" class="box-shadow-full">
+                        <div class="title-box-2">
+                            <h5 class="title-left">
+                                Projects
+                            </h5>
+                        </div>
+
+                        <b>Business Intelligence Dashboard</b>
+                        <p>
+                            This platform support visual, modular HTML/CSS reporting with rich chart graphing libraries and table
+                            plugins.
+                            Along with these we have added features like Access control, Security measures, Excel/PDF download,
+                            Email alerts integration, Live chat and Google map integration so that users can discover more about
+                            organisational data and related metrics.
+                            Also, we have managed data pipelines and connectors to rationalize multiple data sources through a
+                            data engine.
+                            We have used AWS technologies like Redshift, S3, EC2, WAF, RDS with nginx, gunicorn to build
+                            deployment environment.
+                        </p>
+                        <b>Navigation Tool</b>
+                        <p>
+                            By using this tool users can derive geospatial insights, discover relationships and identify geographical
+                            footprints of business entities.
+                            We have integrated search engine and added a user management within this tool. We have used Google
+                            map JavaScript libraries for visualisation.
+                        </p>
+                        <b>Geofencing Tool</b>
+                        <p>Geofencing solution comes with its own dashboard and API, making it easy
+                            for marketers to create, manage and optimize their geofences.</p>
+                        <b>Parking Management System</b>
+                        <p>
+                            It gives parking information such as vehicle & slot counts, easy payments,
+                            display available slots, apply for permits, reserved parking, pay-and-park options, etc.
+                            Also, here an Parking Officer can raise tickets against the traffic violators or
+                            can take actions like tow requests, permit not found.
+                        </p>
+                        <b>Geolimit Distance Tracking System</b>
+                        <p>This Project is used to check if the customer lies within the specified area of a branch.
+                            Also returns the drive time and aerial distance between the customer address and
+                            nearest source branch to them using Google API's
+                        </p>
+                        <b>CKAN based data catalogue system</b>
+                        <p>It's a data management system that provides a powerful platform for cataloging, storing and accessing datasets.</p>
+
+
+                    </div>
                     <div id="contact" class="box-shadow-full">
                         <div class="row">
                             <div class="col-md-6">
@@ -245,7 +287,7 @@
                                     </p>
                                     <ul class="list-ico">
                                         <li><span class="ion-ios-location"></span>Baner, Pune</li>
-                                        <li><span class="ion-ios-telephone"></span>+91 90962 34969</li>
+                                        <li><span class="ion-ios-telephone"></span>+91 90962 34969, +91 86690 23458</li>
                                         <li><span class="ion-email"></span> shubham.shewdikar@gmail.com</li>
                                     </ul>
                                 </div>
