refactor: design changes

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                         <div class="col-md-6">
                             <div class="skill-mf">
                                 <p class="title-s">Skills</p>
-                                <span>Python, Flask framework</span>
+                                <span>Python, Flask, Django</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>VueJs, AngularJS, Quasar Framework</span>
+                                <span>VueJs, AngularJS, Quasar Framework, Nuxt Js</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
                                          aria-valuemin="0"
@@ -109,7 +109,7 @@
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>Pandas, Numpy, Spacy</span>
+                                <span>Pandas, Numpy</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
                                          aria-valuemin="0"
@@ -129,8 +129,8 @@
                                     Hi, I'm a Software Developer at <a style="color: #1c81c4" href="https://geospoc.com">Geospoc</a> in Pune, Maharashtra
                                 </p>
                                 <p class="lead">
-                                    I am fond of building extensive applications and like to integrate new technologies in it.
-                                    Would love to play and watch cricket, badminton and read tech-blogs, political news during leisure time.
+                                    I am passionate building extensive applications and would like to integrate new technologies into it.
+                                    During my leisure time, I watch cricket/badminton and read tech-blog, political news.
                                 </p>
                                 <p class="lead">
                                 </p>
@@ -203,14 +203,14 @@
 
                         <b>Business Intelligence Dashboard</b>
                         <p>
-                            This platform support visual, modular HTML/CSS reporting with rich chart graphing libraries and table
+                            BI dashboard support's visual, modular HTML/CSS reporting with rich chart graphing libraries and table
                             plugins.
                             Along with these we have added features like Access control, Security measures, Excel/PDF download,
                             Email alerts integration, Live chat and Google map integration so that users can discover more about
                             organisational data and related metrics.
-                            Also, we have managed data pipelines and connectors to rationalize multiple data sources through a
+                            We have managed data pipelines and connectors to rationalize multiple data sources through a
                             data engine.
-                            We have used AWS technologies like Redshift, S3, EC2, WAF, RDS with nginx, gunicorn to build
+                            Also, have used AWS technologies like Redshift, S3, EC2, WAF, RDS with nginx, gunicorn to build
                             deployment environment.
                         </p>
                         <b>Navigation Tool</b>
@@ -227,12 +227,12 @@
                         <p>
                             It gives parking information such as vehicle & slot counts, easy payments,
                             display available slots, apply for permits, reserved parking, pay-and-park options, etc.
-                            Also, here an Parking Officer can raise tickets against the traffic violators or
+                            Also, an Parking Officer can raise tickets against the traffic violators or
                             can take actions like tow requests, permit not found.
                         </p>
                         <b>Geolimit Distance Tracking System</b>
-                        <p>This Project is used to check if the customer lies within the specified area of a branch.
-                            Also returns the drive time and aerial distance between the customer address and
+                        <p>Geolimit is used to check if the customer lies within the specified area of a branch
+                            and Distance Tracking returns the drive time and aerial distance between the customer address and
                             nearest source branch to them using Google API's
                         </p>
                         <b>CKAN based data catalogue system</b>
