refactor: design changes

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <div class="col-sm-12">
                                 <h2 class="w-title"><a href="https://geospoc.com">Geospoc</a></h2>
                                 <div class="w-more">
-                                    <span class="w-ctegory">Software Developer - Backend</span> / <span class="w-date">Mar2020 - Current</span>
+                                    <span class="w-ctegory">Software Engineer - Backend</span> / <span class="w-date">Mar2020 - Current</span>
                                 </div>
                             </div>
                         </div>
