refactor: design changes

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             </h5>
                         </div>
 
-                        <b>Business Intelligence Dashboard</b>
+                        <b>Business Intelligence Dashboard - (Incentius)</b>
                         <p>
                             BI dashboard support's visual, modular HTML/CSS reporting with rich chart graphing libraries and table
                             plugins.
@@ -213,29 +213,30 @@
                             Also, have used AWS technologies like Redshift, S3, EC2, WAF, RDS with nginx, gunicorn to build
                             deployment environment.
                         </p>
-                        <b>Navigation Tool</b>
+                        <b>Navigation Tool - (Incentius)</b>
                         <p>
                             By using this tool users can derive geospatial insights, discover relationships and identify geographical
                             footprints of business entities.
                             We have integrated search engine and added a user management within this tool. We have used Google
                             map JavaScript libraries for visualisation.
                         </p>
-                        <b>Geofencing Tool</b>
+                        <b>Geofencing Tool - (Geospoc)</b>
                         <p>Geofencing solution comes with its own dashboard and API, making it easy
-                            for marketers to create, manage and optimize their geofences.</p>
-                        <b>Parking Management System</b>
+                            for marketers to create, manage and optimize their geofences.
+                        </p>
+                        <b>Parking Management System - (Geospoc)</b>
                         <p>
                             It gives parking information such as vehicle & slot counts, easy payments,
                             display available slots, apply for permits, reserved parking, pay-and-park options, etc.
                             Also, an Parking Officer can raise tickets against the traffic violators or
                             can take actions like tow requests, permit not found.
                         </p>
-                        <b>Geolimit Distance Tracking System</b>
+                        <b>Geolimit Distance Tracking System - (Geospoc)</b>
                         <p>Geolimit is used to check if the customer lies within the specified area of a branch
                             and Distance Tracking returns the drive time and aerial distance between the customer address and
                             nearest source branch to them using Google API's
                         </p>
-                        <b>CKAN based data catalogue system</b>
+                        <b>CKAN based data catalogue system - (Geospoc)</b>
                         <p>It's a data management system that provides a powerful platform for cataloging, storing and accessing datasets.</p>
 
 
