--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
             <div class="container">
                 <h1 class="intro-title mb-4">Shubham Shewdikar</h1>
                 <p class="intro-subtitle"><span
-                        class="text-slider-items">Full Stack Developer, Python, VueJs, AngularJs</span><strong
+                        class="text-slider-items">Backend Developer, Python, NodeJs</span><strong
                         class="text-slider"></strong></p>
             </div>
         </div>
     </div>
 </div>
 
-<section id="about" class="about-mf sect-pt1 route" style="">
+<section id="about" class="about-mf sect-pt1 route">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -73,19 +73,25 @@
                         <div class="col-md-6">
                             <div class="skill-mf">
                                 <p class="title-s">Skills</p>
-                                <span>Python, Flask, Django</span>
+                                <span>Python, Flask</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>VueJs, AngularJS, Quasar Framework, Nuxt Js</span>
+                                <span>NodeJs, NestJs</span>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
+                                         aria-valuemin="0"
+                                         aria-valuemax="100"></div>
+                                </div>
+                                <span>VueJs, Quasar Framework, Nuxt Js</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>Serverless Application Framework / REST APIs</span>
+                                <span>REST APIs, Serverless Application Framework</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80"
                                          aria-valuemin="0"
@@ -103,7 +109,7 @@
                                          aria-valuemin="0"
                                          aria-valuemax="100"></div>
                                 </div>
-                                <span>AWS services(Lambda,EC2,S3,API Gateway, Elastic Beanstalk)</span>
+                                <span>AWS services</span>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85"
                                          aria-valuemin="0"
@@ -142,7 +148,7 @@
         </div>
     </div>
 </section>
-<section id="bg_class2" style="" class="paralax-mf sect-pt4 route">
+<section id="bg_class2" class="paralax-mf sect-pt4 route">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -201,42 +207,32 @@
                             </h5>
                         </div>
 
-                        <b>Business Intelligence Dashboard - (Incentius)</b>
+                        <b>Business Intelligence Dashboard</b>
                         <p>
-                            BI dashboard support's visual, modular HTML/CSS reporting with rich chart graphing libraries and table
-                            plugins.
-                            Along with these we have added features like Access control, Security measures, Excel/PDF download,
-                            Email alerts integration, Live chat and Google map integration so that users can discover more about
-                            organisational data and related metrics.
-                            We have managed data pipelines and connectors to rationalize multiple data sources through a
-                            data engine.
-                            Also, have used AWS technologies like Redshift, S3, EC2, WAF, RDS with nginx, gunicorn to build
-                            deployment environment.
+                            BI dashboard support's visual chart graphing libraries and table plugins. Along with these we have added features like Access control, Security measures, Excel/PDF download, Email alerts integration, Google
+                            map integration.
                         </p>
-                        <b>Navigation Tool - (Incentius)</b>
+                        <b>Navigation Tool</b>
                         <p>
                             By using this tool users can derive geospatial insights, discover relationships and identify geographical
                             footprints of business entities.
-                            We have integrated search engine and added a user management within this tool. We have used Google
-                            map JavaScript libraries for visualisation.
                         </p>
-                        <b>Geofencing Tool - (Geospoc)</b>
-                        <p>Geofencing solution comes with its own dashboard and API, making it easy
-                            for marketers to create, manage and optimize their geofences.
+                        <b>Geofencing Tool</b>
+                        <p>Geofencing solution comes with its own dashboard and API, making it easy for marketers to create,
+                            manage and optimize their geofences.
                         </p>
-                        <b>Parking Management System - (Geospoc)</b>
+                        <b>Parking Management System</b>
                         <p>
-                            It gives parking information such as vehicle & slot counts, easy payments,
-                            display available slots, apply for permits, reserved parking, pay-and-park options, etc.
-                            Also, an Parking Officer can raise tickets against the traffic violators or
-                            can take actions like tow requests, permit not found.
+                            It gives parking information such as vehicle & slot counts, easy payments, display available slots, apply
+                            for permits, reserved parking, pay-and-park options, etc. 
+                            Also, an Parking Oﬃcer can raise tickets against the traﬃc violators or can take actions like tow requests, permit not found.
                         </p>
-                        <b>Geolimit Distance Tracking System - (Geospoc)</b>
+                        <b>Geolimit Distance Tracking System</b>
                         <p>Geolimit is used to check if the customer lies within the specified area of a branch
                             and Distance Tracking returns the drive time and aerial distance between the customer address and
                             nearest source branch to them using Google API's
                         </p>
-                        <b>CKAN based data catalogue system - (Geospoc)</b>
+                        <b>Data catalogue system</b>
                         <p>It's a data management system that provides a powerful platform for cataloging, storing and accessing datasets.</p>
 
 
