--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                 </div>
                                 <div class="more-info">
                                     <p class="lead">
-                                    If you wanna get in touch, fill up the form or send me an email.
+                                    If you wanna get in touch, kindly fill up the form or send me an email.
                                     </p>
                                     <ul class="list-ico">
                                         <li><span class="ion-ios-location"></span>Baner, Pune</li>
